PLT-4609 - Fixing list modals on mobile

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -9,8 +9,6 @@
     }
 
     .filtered-user-list {
-        max-height: 65vh !important;
-
         .filter-button {
             .btn {
                 width: 100%;
@@ -1315,6 +1313,12 @@
 
     .app__body {
         .modal {
+            &.more-channel__modal {
+                .modal-body {
+                    padding-bottom: 35px;
+                }
+            }
+
             .settings-modal {
                 &.display--content {
                     .modal-body {
@@ -1324,6 +1328,7 @@
 
                 .modal-body {
                     max-height: 70%;
+                    padding-bottom: 0;
                 }
 
                 .settings-table {
